--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,9 +23,14 @@ jobs:
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       run: |
-        echo "Iniciando login"
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-        echo "Fin del login"
-    
-   # - name: Build the Docker image
-   #  run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+
+    - name: Build docker image
+      run: |
+        docker build -t lau1234/docker-graphql:0.0.1 .
+  
+    - name: Push docker image
+      run: |
+        docker build -t lau1234/docker-graphql:0.0.1 .
+        docker push lau1234/docker-graphql:0.0.1 .
+        
