--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,9 +28,10 @@ jobs:
     - name: Build docker image
       run: |
         docker build -t lau1234/docker-graphql:0.0.1 .
+        docker build -t lau1234/docker-graphql:latest .
   
     - name: Push docker image
       run: |
-        docker build -t lau1234/docker-graphql:0.0.1 .
         docker push lau1234/docker-graphql:0.0.1
+        docker push lau1234/docker-graphql:latest
         
