--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,11 +30,23 @@ jobs:
       env:
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        NEW_VERSION: ${{ steps.version.outputs.version }}
         
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-        echo "New version: $NEW_VERSION !!!!!!!!!!!"
+
+    - name: Build docker image
+      env: 
+        NEW_VERSION: ${{ steps.version.outputs.version }
+      run: |
+        docker build -t lau1234/docker-graphql:$NEW_VERSION .
+        docker build -t lau1234/docker-graphql:latest .
+  
+    - name: Push docker image
+      env: 
+          NEW_VERSION: ${{ steps.version.outputs.version }
+      run: |
+        docker push lau1234/docker-graphql:$NEW_VERSION
+        docker push lau1234/docker-graphql:latest
 
     
         
